src/app/shared/components/full-screen-ticker/full-screen-ticker.component.scss
$duration: 20s;

.contents {
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-image: var(--src);
  background-size: auto 100%;
  background-repeat: repeat-x;
  background-position-x: var(--image-width);

  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  -webkit-animation-name: ticker;
  -webkit-animation-duration: $duration;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-name: ticker;
  animation-duration: $duration;
}

@-webkit-keyframes ticker {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: calc(var(--image-width) * -1);
  }
}

@keyframes ticker {
  0% {
    background-position-x: 0;
  }
  100% {
    background-position-x: calc(var(--image-width) * -1);
  }
}

